objects/vlocity_cmt__Project__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__Creator__c</fullName>
        <label>Creator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsDefault__c</fullName>
        <formula>$Setup.vlocity_cmt__WorkSetSettings__c.vlocity_cmt__DefaultProjectGlobalKey__c  =  vlocity_cmt__GlobalKey__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LastModifier__c</fullName>
        <label>Last Modifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OriginalCreatedDate__c</fullName>
        <description>The date the record was originally created.</description>
        <label>Original Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OriginalLastModifiedDate__c</fullName>
        <description>The date the record was originally last modified.</description>
        <label>Original Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProjectOwner__c</fullName>
        <description>The name of the person who owns the project.</description>
        <label>Project Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>In-Review</fullName>
                </value>
                <value>
                    <fullName>In-Test</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <recordTypes>
        <fullName>vlocity_cmt__Module</fullName>
        <active>true</active>
        <label>Module</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__WorkSet</fullName>
        <active>true</active>
        <label>Work Set</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>